<resources>
    <string name="app_name">Yatrika_Travel</string>
    <!--LoginPage Strings-->
    <string name="login">LOGIN</string>
    <string name="phoneNumber">Phone Number:</string>
    <string name="password">Password:</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign In</string>


    <!--SignIn Strings-->
    <string name="createaccount">Create Account</string>
    <string name="name">Name:</string>
    <string name="Emailid">Email ID:</string>
    <string name="username">Username:</string>
    <string name="next_button">Next</string>
    <string name="submit_button">Submit</string>

    <!--OTP PAge Strings-->
    <string name="verification">Verification</string>
    <string name="optmsg">Enter the OTP sent to </string>
    <string name="verify">Verify</string>

    <!--verified Page String-->
    <string name="verification_msg">Your mobile number is verified!</string>
    <string name="continue_msg">continue</string>

    <!--FetchEmail strings-->
    <string name="fetchmsg">FETCH EMAIL</string>
    <string name="fetchphonemsg">Provide your phone number for which you want to reset password</string>
    <string name="verify_options">SELECT METHOD</string>
    <string name="via_sms">Via SMS :</string>
    <string name="sms_option">Recieve a SMS to </string>
    <string name="new_credentials">NEW CREDENTIALS</string>
    <string name="option_msg">Choose through which method you want to edit your password</string>
    <string name="credential_msg">Enter the new credentials for your account</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="updatedMgs">Your password has been updated successfully!</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>