<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="SignInProcess.SignInPage2"
    android:background="@color/primary_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/simple_back_icon"
            android:layout_marginLeft="15dp"
            app:tint="@color/black"
            android:onClick="openSignInScreen1"/>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:textAllCaps="true"
        android:fontFamily="@font/amaranth"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/createaccount"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:fontFamily="@font/baloo_chettan"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gender:"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/amaranth"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/gender_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:outlineSpotShadowColor="@color/black"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="Female"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="Other"
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:background="@color/black"/>

    <com.hbb20.CountryCodePicker
        android:id="@+id/country_code_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        app:ccp_autoDetectCountry="true"
        app:ccp_showFlag="true"
        app:ccp_showNameCode="true"
        app:ccp_showFullName="true"
        android:background="@drawable/black_border"
        app:ccpDialog_textColor="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/phoneNumber"
        app:hintTextColor="@color/black"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:startIconDrawable="@drawable/simple_phonenumber_icon"
        app:startIconTint="@color/black"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth"
            android:textColor="@color/black"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:background="@color/black"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/submit_button"
        android:textColor="@color/white"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="40dp"/>

</LinearLayout>